--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 font-family: 'Playfair Display', serif;
                 color:white; font-size: 24px;
                 font-weight: 700;
-                background-color: rgb(133, 91, 0);
+                background-color: rgb(60, 133, 0);
                 padding-left: 30px;
                 padding-top: 10px;
                 "
@@ -41,12 +41,17 @@
         </div>
     </div>
     <div class="container">
+        <div style="position: absolute;">
+            <img src="Assets/pngegg (8).png" style="height: 350px;">
+        </div>
         <div style="
-            background-color: rgb(133, 91, 0);
-            font-size: 50px;
+            background-color: rgb(60, 133, 0);
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 45px;
             font-weight: 700;
+            line-height: 60px;
             color: white;
-            padding: 200px 0px 0px 20px;
+            padding: 350px 0px 0px 20px;
             "
             >TASTES<br/>OF<br/>AFRICA
         </div>
@@ -72,16 +77,11 @@
                 place-content: center;
                 grid-gap: 20px;
                 ">
+                <div class="order-now-btn">
+                    Order Now
+                </div>
                 <div style="
-                    padding: 18px 0px;
-                    background-color: black;
-                    color: white;
-                    border-radius: 20px;
-                    text-align: center;
-                    font-size: 20px;
-                    "
-                    >Order Now</div>
-                <div style="
+                    font-family: Arial, Helvetica, sans-serif;
                     padding: 18px 0px;
                     color: rgb(12, 1, 1);
                     border-radius: 20px;
@@ -93,6 +93,22 @@
                     >
                     <i class="fas fa-play-circle fa-sm"></i>
                     How to order</div>
+            </div>
+            <div style="
+                display: grid;
+                grid-template-columns: auto auto;
+                grid-gap: 40px;
+                place-content: center;
+                padding: 35px 0px;
+                text-align: justify;
+                background-color: white;
+                ">
+                <div style="display: grid; grid-template-columns: 60% 40%; align-items: center;">
+                    <div style="font-size: 35px;">350k+</div>
+                    <div>Happy<br/>Customers</div>
+                </div>
+                <div>
+                    "This is the best Japanese food delivery<br/>service that ever existed."
             </div>
         </div>
 
