--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div>Happy<br/>Customers</div>
                 </div>
                 <div>
-                    "This is the best Japanese food delivery<br/>service that ever existed."
+                    "This is the best African food delivery<br/>service that ever existed."
             </div>
         </div>
 
