--- a/index.html
+++ b/index.html
@@ -22,19 +22,11 @@
             >
             AFRICUISINE
         </div>
-        <div style="
-            font-family: 'Noto Sans', sans-serif;
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            text-align: center;
-            padding: 20px 0px;
-            padding-left: 15px;
-            justify-items: end;
-            ">
-            <div>MENU</div>
-            <div>FOOD</div>
-            <div>SERVICES</div>
-            <div>ABOUT US</div>
+        <div class="header-menu">
+            <div class="header-btn">MENU</div>
+            <div class="header-btn">FOOD</div>
+            <div class="header-btn">SERVICES</div>
+            <div class="header-btn">ABOUT US</div>
             <div>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
@@ -42,7 +34,7 @@
     </div>
     <div class="container">
         <div style="position: absolute;">
-            <img src="Assets/pngegg (8).png" style="height: 350px;">
+            <img src="Assets/spoon.png" style="height: 500px;">
         </div>
         <div style="
             background-color: rgb(60, 133, 0);
@@ -73,25 +65,16 @@
             </div>
             <div style="
                 display: grid;
-                grid-template-columns: repeat(2, 150px);
+                padding: 5px 0px;
+                grid-template-columns: repeat(2, 160px);
                 place-content: center;
                 grid-gap: 20px;
                 ">
                 <div class="order-now-btn">
                     Order Now
                 </div>
-                <div style="
-                    font-family: Arial, Helvetica, sans-serif;
-                    padding: 18px 0px;
-                    color: rgb(12, 1, 1);
-                    border-radius: 20px;
-                    text-align: center;
-                    font-size: 20px;
-                    align-items: center;
-                    display: grid; grid-template-columns: 0.5fr 2fr;
-                    "
-                    >
-                    <i class="fas fa-play-circle fa-sm"></i>
+                <div class="how-to-order">
+                    <img src="Assets/play-circle.svg">
                     How to order</div>
             </div>
             <div style="
@@ -99,16 +82,30 @@
                 grid-template-columns: auto auto;
                 grid-gap: 40px;
                 place-content: center;
-                padding: 35px 0px;
+                padding: 35px 10px;
                 text-align: justify;
                 background-color: white;
                 ">
-                <div style="display: grid; grid-template-columns: 60% 40%; align-items: center;">
+                <div style="
+                    display: grid;
+                    grid-template-columns: 60% 40%;
+                    align-items: center;
+                    justify-items: center;
+                    ">
                     <div style="font-size: 35px;">350k+</div>
                     <div>Happy<br/>Customers</div>
                 </div>
-                <div>
+                <div style="
+                    display: grid;
+                    grid-template-columns: 0.5fr 1.5fr;
+                    place-content: center;
+                    align-items: center;
+                    justify-items: center;
+                    ">
+                    <img src="Assets/user.png" style="width: 50px;">
+                    <div>
                     "This is the best African food delivery<br/>service that ever existed."
+                    </div>
             </div>
         </div>
 
