Index: learn more button

--- a/index.html
+++ b/index.html
@@ -124,8 +124,20 @@
                 background-size: cover;
                 /* background-image: url(Assets/about_bg1.png); */
                 ">
-                <img src="Assets/pngwing.com (29).png" style="width: 350px">
-                <img src="Assets/jollof-rice.png" style="width: 325px;">
+                <img src="Assets/pngwing.com (29).png" style="width: 350px; padding-bottom: 30px;">
+                <div class="learn-more" style="
+                position: absolute;
+                top: 35%;
+                right: 0%;
+                width: 30%;
+                text-align: right;
+                background-color: black;
+                border-top-left-radius: 100px;
+                border-bottom-left-radius: 100px;
+                padding: 20px 32px;
+                color: white;
+                ">Learn More!</div>
+                <img src="Assets/jollof-rice.png" style="width: 325px; padding-top: 20px;">
             </div>
         </div>
         
